<resources>
    <string name="app_name">Calculadora3</string>
    <string name="btnCero">0</string>
    <string name="uno">1</string>
    <string name="cuatro">4</string>
    <string name="mas">+</string>
    <string name="nueve">9</string>
    <string name="punto">.</string>
    <string name="negativo">±</string>
    <string name="dividir">÷</string>
    <string name="igual">=</string>
    <string name="menos">-</string>
    <string name="ocho">8</string>
    <string name="multiplicacion">X</string>
    <string name="siete">7</string>
    <string name="seis">6</string>
    <string name="cinco">5</string>
    <string name="clean">C</string>
    <string name="tres">3</string>
    <string name="dos">2</string>
</resources>