<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TableLayout
        android:id="@+id/tableLayout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical"
        android:stretchColumns="*"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp">

            <EditText
                android:id="@+id/num1"
                android:layout_span="4"
                android:cursorVisible="true"
                android:gravity="right"
                android:textSize="72sp" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp">

            <Button
                android:id="@+id/buttonUno"
                style="@style/Widget.AppCompat.Button.Colored"
                android:text="@string/uno"
                android:textSize="60sp" />

            <Button
                android:id="@+id/buttonDos"
                style="@style/Widget.AppCompat.Button.Colored"
                android:text="@string/dos"
                android:textSize="60sp" />

            <Button
                android:id="@+id/buttonTres"
                style="@style/Widget.AppCompat.Button.Colored"
                android:text="@string/tres"
                android:textSize="60sp" />

            <Button
                android:id="@+id/buttonClear"
                style="@style/Widget.AppCompat.Button.Colored"
                android:text="@string/clean"
                android:textSize="60sp" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp">

            <Button
                android:id="@+id/buttonCuatro"
                style="@style/Widget.AppCompat.Button.Colored"
                android:text="@string/cuatro"
                android:textSize="60sp" />

            <Button
                android:id="@+id/buttonCinco"
                style="@style/Widget.AppCompat.Button.Colored"
                android:text="@string/cinco"
                android:textSize="60sp" />

            <Button
                android:id="@+id/buttonSeis"
                style="@style/Widget.AppCompat.Button.Colored"
                android:text="@string/seis"
                android:textSize="60sp" />

            <Button
                android:id="@+id/buttonMas"
                style="@style/Widget.AppCompat.Button.Colored"
                android:text="@string/mas"
                android:textSize="60sp" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp">

            <Button
                android:id="@+id/buttonSiete"
                style="@style/Widget.AppCompat.Button.Colored"
                android:text="@string/siete"
                android:textSize="60sp" />

            <Button
                android:id="@+id/buttonOcho"
                style="@style/Widget.AppCompat.Button.Colored"
                android:text="@string/ocho"
                android:textSize="60sp" />

            <Button
                android:id="@+id/buttonNueve"
                style="@style/Widget.AppCompat.Button.Colored"
                android:text="@string/nueve"
                android:textSize="60sp" />

            <Button
                android:id="@+id/buttonMenos"
                style="@style/Widget.AppCompat.Button.Colored"
                android:text="@string/menos"
                android:textSize="60sp" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp">

            <Button
                android:id="@+id/buttonDecimal"
                style="@style/Widget.AppCompat.Button.Colored"
                android:text="@string/punto"
                android:textSize="60sp" />

            <Button
                android:id="@+id/buttonCero"
                style="@style/Widget.AppCompat.Button.Colored"
                android:text="@string/btnCero"
                android:textSize="60sp" />

            <Button
                android:id="@+id/buttonDividir"
                style="@style/Widget.AppCompat.Button.Colored"
                android:text="@string/dividir"
                android:textSize="60sp" />

            <Button
                android:id="@+id/buttonMultiplicar"
                style="@style/Widget.AppCompat.Button.Colored"
                android:text="@string/multiplicacion"
                android:textSize="60sp" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp">

            <Button
                android:id="@+id/buttonIgual"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_span="4"
                android:text="@string/igual"
                android:textSize="60sp" />

        </TableRow>
    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>